--- a/ramdisk/init.samsungexynos7870.rc
+++ b/ramdisk/init.samsungexynos7870.rc
@@ -12,7 +12,7 @@ on early-init
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 
 on init
-    export LD_SHIM_LIBS "/system/lib/libbauthserver.so|/system/lib/libbauthtzcommon_shim.so"
+    export LD_SHIM_LIBS "/system/lib/libbauthserver.so|/system/lib/libbauthtzcommon_shim.so:/system/bin/gpsd|libdmitry-shim.so:/system/lib/libexynoscamera.so|/system/vendor/lib/libcamhelpr.so"
 
     mkdir /preload 0771 system system
 
@@ -22,8 +22,15 @@ on init
 
     # Support legacy paths
     symlink /sdcard /mnt/sdcard
-
+    symlink /sdcard /storage/sdcard0
+    symlink /sdcard1 /storage/sdcard1
+    symlink /sdcard1 /mnt/extSdCard
+    symlink /sdcard1 /mnt/sdcard1
+    symlink /sdcard1 /external_sd
+    symlink /storage/usbdisk /mnt/usbdisk
+ 
     export EXTERNAL_STORAGE /sdcard
+    export SECONDARY_STORAGE /storage/extSdCard
     symlink /data/app /factory
     symlink /dev/block/platform/13540000.dwmmc0/by-name/PERSISTENT /dev/block/persistent
     symlink /dev/block/platform/13540000.dwmmc0/by-name/STEADY /dev/block/steady
@@ -210,8 +217,8 @@ on boot
 
 # permissions for bluetooth.
     setprop ro.bt.bdaddr_path "/efs/bluetooth/bt_addr"
-    chown bluetooth net_bt_stack ro.bt.bdaddr_path
-    chown radio net_bt_stack /efs/bluetooth/bt_addr
+    chown bluetooth bluetooth ro.bt.bdaddr_path
+    chown radio bluetooth /efs/bluetooth/bt_addr
     chmod 0640 /efs/bluetooth/bt_addr
     chmod 0660 /sys/class/rfkill/rfkill0/state
     chmod 0660 /sys/class/rfkill/rfkill0/device/extldo
@@ -788,7 +795,7 @@ on property:ro.bootmode=charger
 on property:ro.bootmode=charger
    class_start sec-charger
 
-service battery_charger /sbin/healthd -c
+service charger /charger -c
     class charger
     critical
     seclabel u:r:healthd:s0
