--- a/ramdisk/init.samsung.rc
+++ b/ramdisk/init.samsung.rc
@@ -3,10 +3,6 @@
 # This is a common source of Android security bugs.
 #
 
-on init
-
-    ffu
-
 # [ SEC_SELINUX_PORTING_COMMON
     # for audit message
     chown system system /proc/avc_msg
@@ -465,12 +461,12 @@ on boot
     chmod 0775 /efs/bluetooth
 
     setprop ro.bt.bdaddr_path "/efs/bluetooth/bt_addr"
-    chown bluetooth net_bt_stack ro.bt.bdaddr_path
-    chown radio net_bt_stack /efs/bluetooth/bt_addr
+    chown bluetooth bluetooth ro.bt.bdaddr_path
+    chown radio bluetooth /efs/bluetooth/bt_addr
     chmod 0640 /efs/bluetooth/bt_addr
     chmod 0660 /sys/class/rfkill/rfkill0/state
-    chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/state
-    chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/type
+    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
+    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
 
     # set RLIMIT_NICE to allow priorities from 19 to -20
     setrlimit 13 40 40
@@ -996,12 +992,7 @@ service edmaudit /system/bin/edmaudit
 service drm /system/bin/drmserver
     class main
     user drm
-# [ SEC_MM_DRM
-# fix
-    group system drm inet drmrpc readproc dpgp
-# org
-#    group drm system inet drmrpc
-# ]
+    group drm system inet drmrpc
 
 service scs /system/bin/scs
     class main
