--- a/ramdisk/init.rilchip.rc
+++ b/ramdisk/init.rilchip.rc
@@ -4,27 +4,32 @@
 # This is a common source of Android security bugs.
 #
 
-service ril-daemon /system/bin/rild
+service ril-daemon /vendor/bin/hw/rild -c 1 -l /system/lib/libsec-ril.so
     class main
     socket rild stream 660 root radio
     socket sap_uim_socket1 stream 660 bluetooth bluetooth
     socket rild-debug stream 660 radio system
     user root
-    group radio cache inet misc audio sdcard_r sdcard_rw log vpn system readproc
+    group radio cache inet misc audio sdcard_r sdcard_rw log vpn system readproc wakelock
+    capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
     onrestart restart cpboot-daemon
 
-service ril-daemon1 /system/bin/rild -c 2
+service ril-daemon1 /vendor/bin/hw/rild -c 2 -l /system/lib/libsec-ril-dsds.so
     class main
-    socket rild2 stream 660 root radio
-    socket rild-debug2 stream 660 radio system
-    user root
-    group radio cache inet misc audio sdcard_r sdcard_rw log vpn system readproc
-    disabled
+    socket rild2 stream 660 system radio
+    socket rild-debug2 stream 660 system radio
+    user radio
+    group radio cache inet misc audio sdcard_r sdcard_rw log vpn system readproc wakelock
+    capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
     onrestart restart cpboot-daemon
+    disabled
 
 on property:persist.sys.cpboot=disable
     stop ril-daemon
     stop cpboot-daemon
+
+on property:ro.multisim.simslotcount=2
+    start ril-daemon1
 
 service SMD-daemon /system/bin/smdexe
     class main
