ramdisk: Add more permissions for proximity sensor
Change-Id: I6a62aea65fe70b749a7144e93923601b2f4f49db
Signed-off-by: lzzy12 <jhashivam2020@gmail.com>

--- a/ramdisk/init.samsung.rc
+++ b/ramdisk/init.samsung.rc
@@ -765,6 +765,10 @@ on boot
     chown system radio /sys/class/sensors/proximity_sensor/vendor
     chown system radio /sys/class/sensors/proximity_sensor/name
     chown system radio /sys/class/sensors/proximity_sensor/dhr_sensor_info
+    chown system radio /sys/class/sensors/proximity_sensor/barcode_emul_en
+    chown system radio /sys/class/sensors/proximity_sensor/prox_trim
+    chown system radio /sys/class/sensors/proximity_sensor/prox_offset_pass
+
 # Light_sensor
     chown system radio /sys/class/sensors/light_sensor/lux
     chown system radio /sys/class/sensors/light_sensor/raw_data
